--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,3 @@
-[[headers]]
-for = "/**.js"
-[headers.values]
-Content-Type = "application/javascript"
+[build]
+  command = "npm run build"
+  publish = "dist/public"
